# ploy

./: .aster.yaml  .gitignore  .gitlab-ci.yml  .golangci.yml  .goreleaser.yml  .markdownlint.yaml  .ploy.yaml  .pre-commit-config.yaml  2025-09-05-this-session-is-being-continued-from-a-previous-co.txt  AGENTS.md  ARCHITECTURE_DIAGRAM.md  BEARER.md  CHANGELOG.md  CHECKPOINT.md  CHECKPOINT_MODS.md  CLAUDE.md  CODEBASE_EXPLORATION.md  DNS_UPDATE_GUIDE.md  DOCS.md  Dockerfile.openrewrite  EXPLORATION_INDEX.md  EXPLORATION_README.md  GOLANG.md  IMPLEMENT.sh  LICENSE  Makefile  NAMECHEAP_API_SETUP.md  NOTES.md  PIPES.md  README.md  REUSE.md  ROADMAP.md  ROADMAP_BG_DECOUPLE.md  ROADMAP_DAG.md  ROADMAP_NEXT.md  ROADMAP_v29.md  SCHEMA.sql  SHIFT.md  SIMPLE.md  SIMPLE.sql  (+29 more)
.claude/: agent-selector.js  agents.json  settings.json  wildcard-cert-automation-plan.md
.githooks/: pre-commit
.github/: pull_request_template.md  settings.yml
.gocache/: trim.txt
api/: README.md  main.go
apps/wasm-cpp-hello/: CMakeLists.txt
badges/: contents.md
benchmark_results/: Phase1-Test-Report-20250827.md
chttp/: Dockerfile.client  Dockerfile.pylint  README.md  docker-compose.yml  go.mod  go.sum
cmd/: structure_test.go
configs/: arf-hybrid-pipeline.yaml  arf-learning-config.yaml  arf-llm-config.yaml  java-errorprone-config.yaml  openrewrite-chttp-service.yaml  pylint-chttp-service.yaml  python-pylint-config.yaml  static-analysis-config.yaml  storage-config.yaml  webhooks-config.yaml
controller/: README.md  deploy.sh  main.go
tests/apps/wasm-cpp-hello/: CMakeLists.txt  main.cpp
(+10211 files in other folders)
